"""Native `cc_library` for JBIG-KIT — replaces the `rules_foreign_cc` `make()` wrapper.

JBIG-KIT's portable library is two translation units (`jbig.c` + `jbig_ar.c`)
with no generated config header and no external deps. The T.85-only
`jbig85.{c,h}` and the `tstcodec*` test drivers are excluded — libtiff's
`tif_jbig.c` consumes the full T.82 API declared in `jbig.h`.

Licensing: JBIG-KIT's library is GPL; SIPI is AGPL-3.0 (GPL-compatible) and
already links it. Not referenced by first-party SIPI code — it is wired into
the native libtiff (`JBIG_SUPPORT`) to enable JBIG-in-TIFF decode.
"""

load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "jbig",
    srcs = [
        "libjbig/jbig.c",
        "libjbig/jbig_ar.c",
    ],
    hdrs = [
        "libjbig/jbig.h",
        "libjbig/jbig_ar.h",
    ],
    includes = ["libjbig"],
    linkstatic = True,
)
