"""BUILD file symlinked into the @kakadu repository's extracted source root.

Wraps Kakadu's hand-written, per-arch Makefile build (`make/` subdirectory)
in a `rules_foreign_cc` `make()` rule that produces `libkdu.a` + `libkdu_aux.a`,
then re-exposes them as a single `:kdu` target consumable by Sipi.

Mirrors the existing `ext/kakadu/CMakeLists.txt:67-77` invocation:

    make -j1 --directory=$src/make/ -f $KDU_MAKE EXEC_PLATFORM=$KDU_EXEC_PLATFORM all_but_jni

with $KDU_MAKE / $KDU_EXEC_PLATFORM / $KDU_ARCH selected per (os, cpu) per
`CMakeLists.txt:145-174`. Per-arch sed mutations from the same file are
already applied at extract time by `kakadu_archive` via `patches/`.

`make()`'s standard `targets`/`args` shape can't drive a working-directory-
sensitive build, so the entire build + stage is funnelled through
`postfix_script` which runs after foreign_cc's setup (working tree
materialised under `$BUILD_TMPDIR`, install prefix at `$INSTALLDIR`).
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    # Same lesson as `bazel/all_content.BUILD.bazel`: the upstream Kakadu
    # build_all target (`all_but_jni`) builds `kdu_hyperdoc` which `cd`s
    # into `documentation/` and reads `hyperdoc.src` — excluding the dir
    # for cache-key stability breaks the build outright. Pin by SHA in
    # MODULE.bazel; let the glob expose the full source tree.
    srcs = glob(["**"]),
)

# Per-arch make config selectors — values track CMakeLists.txt:145-174.
# The aarch64 macOS Makefile name uses upper-case "MAC" (Kakadu inconsistency
# preserved from upstream).
_KDU_MAKE = select({
    "@@//platforms:is_linux_x86_64": "Makefile-Linux-x86-64-gcc",
    "@@//platforms:is_linux_aarch64": "Makefile-Linux-arm-64-gcc",
    "@@//platforms:is_darwin_x86_64": "Makefile-Mac-x86-64-gcc",
    # Upstream actually ships `Makefile-Mac-arm-64-gcc` (mixed case).
    # The earlier "MAC" upper-case spelling worked locally on macOS's
    # default case-insensitive APFS but fails on GitHub-hosted runners
    # whose work volumes are case-sensitive.
    "@@//platforms:is_darwin_aarch64": "Makefile-Mac-arm-64-gcc",
})

_KDU_EXEC_PLATFORM = select({
    "@@//platforms:is_linux_x86_64": "Linux-x86-64-gcc",
    "@@//platforms:is_linux_aarch64": "Linux-arm-64-gcc",
    "@@//platforms:is_darwin_x86_64": "Mac-x86-64-gcc",
    "@@//platforms:is_darwin_aarch64": "Mac-arm-64-gcc",
})

_KDU_ARCH = select({
    "@@//platforms:is_linux_x86_64": "Linux-x86-64-gcc",
    "@@//platforms:is_linux_aarch64": "Linux-arm-64-gcc",
    "@@//platforms:is_darwin_x86_64": "Mac-x86-64-gcc",
    "@@//platforms:is_darwin_aarch64": "Mac-arm-64-gcc",
})

# The default `make()` rule runs `make && make install` from `$BUILD_TMPDIR`.
# Kakadu has no `install` target, so we run an empty default `make` (no-op-ish
# from the working dir) and do everything real in `postfix_script`: cd into
# the source's `make/` directory, run `make all_but_jni` with the per-arch
# Makefile, then stage outputs under `$INSTALLDIR`.
make(
    name = "kakadu",
    lib_source = ":all_srcs",
    out_static_libs = [
        "libkdu.a",
        "libkdu_aux.a",
    ],
    out_include_dir = "include",
    targets = [],
    # macOS libtool-PATH workaround from `ext/kakadu/CMakeLists.txt:21-22`:
    # if Nix puts GNU libtool on PATH first, it shadows Apple's libtool and
    # fails with "unrecognised option: -static". Prepend /usr/bin so the
    # macOS libtool is always found. No-op on Linux.
    env = select({
        "@platforms//os:macos": {"PATH": "/usr/bin:$$PATH"},
        "//conditions:default": {},
    }),
    # postfix_script uses `$$VAR` (single trailing `$`) — see
    # ext/png/BUILD.bazel for the substitution-form write-up.
    #
    # Kakadu's hand-written Makefiles write build artefacts to relative
    # paths (`lib/<arch>/`, `bin/<arch>/`, …). foreign_cc's `make()` rule
    # populates BUILD_TMPDIR with symlinks to the @kakadu source repo, so
    # newly-emitted .a files actually land alongside the source under
    # `$EXT_BUILD_ROOT/external/+kakadu_extension+kakadu/lib/<arch>/` —
    # NOT inside BUILD_TMPDIR. The cp commands below reach into the
    # source dir to grab those outputs and stage them in INSTALLDIR.
    postfix_script = (
        "cd $$BUILD_TMPDIR/make && " +
        "make -j1 -f " + _KDU_MAKE + " EXEC_PLATFORM=" + _KDU_EXEC_PLATFORM + " all_but_jni && " +
        "mkdir -p $$INSTALLDIR/lib $$INSTALLDIR/include && " +
        "cp $$EXT_BUILD_ROOT/external/+kakadu_extension+kakadu/lib/" + _KDU_ARCH + "/libkdu.a $$INSTALLDIR/lib/ && " +
        "cp $$EXT_BUILD_ROOT/external/+kakadu_extension+kakadu/lib/" + _KDU_ARCH + "/libkdu_aux.a $$INSTALLDIR/lib/ && " +
        "cp -R $$EXT_BUILD_ROOT/external/+kakadu_extension+kakadu/managed/all_includes/. $$INSTALLDIR/include/"
    ),
    # Cache portability: rules_foreign_cc emits debug-info paths under
    # `$EXT_BUILD_ROOT` by default, which embeds machine-local sandbox paths
    # into objects and breaks remote-cache hits.
    set_file_prefix_map = True,
)

# Convenience alias. Sipi consumes `@kakadu//:kdu`.
alias(
    name = "kdu",
    actual = ":kakadu",
)
