"""BUILD file symlinked into the @kakadu repository's extracted source root.

Wraps Kakadu's hand-written, per-arch Makefile build (`make/` subdirectory)
in a `rules_foreign_cc` `make()` rule that produces `libkdu.a` + `libkdu_aux.a`,
then re-exposes them as a single `:kdu` target consumable by Sipi.

Mirrors the existing `ext/kakadu/CMakeLists.txt:67-77` invocation:

    make -j1 --directory=$src/make/ -f $KDU_MAKE EXEC_PLATFORM=$KDU_EXEC_PLATFORM all_but_jni

with $KDU_MAKE / $KDU_EXEC_PLATFORM / $KDU_ARCH selected per (os, cpu) per
`CMakeLists.txt:145-174`. Per-arch sed mutations from the same file are
already applied at extract time by `kakadu_archive` via `patches/`.

`make()`'s standard `targets`/`args` shape can't drive a working-directory-
sensitive build, so the entire build + stage is funnelled through
`postfix_script` which runs after foreign_cc's setup (working tree
materialised under `$BUILD_TMPDIR`, install prefix at `$INSTALLDIR`).
"""

load("@rules_foreign_cc//foreign_cc:defs.bzl", "make")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "all_srcs",
    # Same lesson as `bazel/all_content.BUILD.bazel`: the upstream Kakadu
    # build_all target (`all_but_jni`) builds `kdu_hyperdoc` which `cd`s
    # into `documentation/` and reads `hyperdoc.src` — excluding the dir
    # for cache-key stability breaks the build outright. Pin by SHA in
    # MODULE.bazel; let the glob expose the full source tree.
    srcs = glob(["**"]),
)

# Per-arch make config selectors — values track CMakeLists.txt:145-174.
# The aarch64 macOS Makefile name uses upper-case "MAC" (Kakadu inconsistency
# preserved from upstream).
_KDU_MAKE = select({
    "@@//platforms:is_linux_x86_64": "Makefile-Linux-x86-64-gcc",
    "@@//platforms:is_linux_aarch64": "Makefile-Linux-arm-64-gcc",
    "@@//platforms:is_darwin_x86_64": "Makefile-Mac-x86-64-gcc",
    # Upstream actually ships `Makefile-Mac-arm-64-gcc` (mixed case).
    # The earlier "MAC" upper-case spelling worked locally on macOS's
    # default case-insensitive APFS but fails on GitHub-hosted runners
    # whose work volumes are case-sensitive.
    "@@//platforms:is_darwin_aarch64": "Makefile-Mac-arm-64-gcc",
})

_KDU_EXEC_PLATFORM = select({
    "@@//platforms:is_linux_x86_64": "Linux-x86-64-gcc",
    "@@//platforms:is_linux_aarch64": "Linux-arm-64-gcc",
    "@@//platforms:is_darwin_x86_64": "Mac-x86-64-gcc",
    "@@//platforms:is_darwin_aarch64": "Mac-arm-64-gcc",
})

_KDU_ARCH = select({
    "@@//platforms:is_linux_x86_64": "Linux-x86-64-gcc",
    "@@//platforms:is_linux_aarch64": "Linux-arm-64-gcc",
    "@@//platforms:is_darwin_x86_64": "Mac-x86-64-gcc",
    "@@//platforms:is_darwin_aarch64": "Mac-arm-64-gcc",
})

# The default `make()` rule runs `make && make install` from `$BUILD_TMPDIR`.
# Kakadu has no `install` target, so we run an empty default `make` (no-op-ish
# from the working dir) and do everything real in `postfix_script`: cd into
# the source's `make/` directory, run `make all_but_jni` with the per-arch
# Makefile, then stage outputs under `$INSTALLDIR`.
make(
    name = "kakadu",
    lib_source = ":all_srcs",
    out_static_libs = [
        "libkdu.a",
        "libkdu_aux.a",
    ],
    out_include_dir = "include",
    targets = [],
    # macOS libtool-PATH workaround from `ext/kakadu/CMakeLists.txt:21-22`:
    # if Nix puts GNU libtool on PATH first, it shadows Apple's libtool and
    # fails with "unrecognised option: -static". Prepend /usr/bin so the
    # macOS libtool is always found. No-op on Linux.
    env = select({
        "@platforms//os:macos": {"PATH": "/usr/bin:$$PATH"},
        "//conditions:default": {},
    }),
    # postfix_script uses `$$VAR` (single trailing `$`) — see
    # ext/png/BUILD.bazel for the substitution-form write-up.
    #
    # Kakadu's hand-written Makefiles write build artefacts to relative
    # paths (`lib/<arch>/`, `bin/<arch>/`, `documentation/html_pages/`, …)
    # which resolve via foreign_cc's symlink farm back to the @kakadu
    # source under `$EXT_BUILD_ROOT/external/+kakadu_extension+kakadu/`.
    # Some writes succeed (lib/, bin/ — those dirs already get populated
    # by foreign_cc's setup so they sit on writable storage) but others
    # fail: `kdu_hyperdoc` runs from `documentation/`, mkdirs
    # `html_pages/`, then fails to fopen() `html_pages/blank.html` with
    # the generic "Unable to create the HTML file" error — the freshly
    # created dir falls outside the sandbox's writable areas.
    #
    # Canonical foreign_cc fix for in-tree builds that write next to
    # source: dereference the symlink farm into a real copy under
    # BUILD_TMPDIR (which IS fully writable) and run make there. The
    # CMake build (`ext/kakadu/CMakeLists.txt`) sidesteps this by
    # extracting the archive directly into a fresh dir; staging here
    # achieves the same shape inside Bazel's sandbox.
    postfix_script = (
        "STAGE=$$BUILD_TMPDIR/.kakadu-stage && " +
        "mkdir -p $$STAGE && " +
        "cp -RL $$EXT_BUILD_ROOT/external/+kakadu_extension+kakadu/. $$STAGE/ && " +
        "cd $$STAGE/make && " +
        # On Linux, Nix's clang++ on PATH sees the host runner's glibc
        # 2.39 headers, which contain C23 transparent renames like
        # `#define strtol __isoc23_strtol` (gated by __GLIBC_USE(ISOC2X)
        # which is true under _GNU_SOURCE / C++23). The kakadu .o files
        # then reference `__isoc23_strtol` (a glibc 2.38+ symbol). The
        # final sipi link uses toolchains_llvm's Chromium debian-bullseye
        # sysroot which only has glibc 2.31 — symbol mismatch.
        #
        # Force Nix's clang++ to use the Chromium sysroot for headers
        # via `--sysroot=…`. The sysroot ships glibc 2.31, which has no
        # __isoc23_strtol redirect, so the .o files contain the canonical
        # glibc 2.31 symbols that the final link can resolve.
        # No-op on darwin (no Linux sysroot to find; clang already uses
        # CLT SDK by default).
        #
        # Two LIBRARY_PATH entries injected via env:
        #   1. libcxx: extracted from NIX_LDFLAGS so ld.bfd can resolve
        #      `-lc++` (Nix's clang adds `-lc++` to link automatically;
        #      ld needs to find libc++.so somewhere). The grep is a no-op
        #      on macOS where /usr/lib satisfies the linker.
        #   2. sysroot's lib path so the final link finds glibc 2.31 libs
        #      that match the headers. Belt-and-braces; --sysroot already
        #      adds the lib search path, but explicit LIBRARY_PATH ensures
        #      it survives any wrapper post-processing.
        "LIBCXX_DIR=$$(printf '%s\\n' \"$${NIX_LDFLAGS:-}\" | tr ' ' '\\n' | grep -E '^-L.*libcxx[^/]*/lib$$' | head -1 | sed 's/^-L//' || true) && " +
        "case \"$$(uname -s)\" in " +
        "  Linux) SYSROOT_DIR=$$(find $$EXT_BUILD_ROOT/external -maxdepth 1 -type d -name '+sysroot+sysroot_linux_*' 2>/dev/null | head -1); " +
        "          [ -n \"$$SYSROOT_DIR\" ] && SYSROOT_FLAG=\"--sysroot=$$SYSROOT_DIR/sysroot\" || SYSROOT_FLAG=\"\" ;; " +
        "  *)     SYSROOT_FLAG=\"\" ;; " +
        "esac && " +
        "echo \"kakadu: LIBCXX_DIR=$$LIBCXX_DIR SYSROOT_FLAG=$$SYSROOT_FLAG\" && " +
        "export LIBRARY_PATH=\"$$LIBCXX_DIR$${LIBRARY_PATH:+:$$LIBRARY_PATH}\" && " +
        # Synthesize a wrapper that prepends the sysroot flag so kakadu's
        # `$(CC) -c file.cpp` lines pick it up. Make CLI vars must be a
        # single token, so `make CC=\"clang++ --sysroot=…\"` won't work —
        # make would split on whitespace.
        "WRAPPER=$$BUILD_TMPDIR/bazel_cxx_wrapper.sh && " +
        "printf '%s\\n' '#!/bin/bash' \"exec clang++ $$SYSROOT_FLAG \\\"\\$$@\\\"\" > \"$$WRAPPER\" && " +
        "chmod +x \"$$WRAPPER\" && " +
        "make -j1 -f " + _KDU_MAKE + " EXEC_PLATFORM=" + _KDU_EXEC_PLATFORM + " CC=\"$$WRAPPER\" CXX=\"$$WRAPPER\" all_but_jni && " +
        "mkdir -p $$INSTALLDIR/lib $$INSTALLDIR/include && " +
        "cp $$STAGE/lib/" + _KDU_ARCH + "/libkdu.a $$INSTALLDIR/lib/ && " +
        "cp $$STAGE/lib/" + _KDU_ARCH + "/libkdu_aux.a $$INSTALLDIR/lib/ && " +
        "cp -R $$STAGE/managed/all_includes/. $$INSTALLDIR/include/"
    ),
    # Cache portability: rules_foreign_cc emits debug-info paths under
    # `$EXT_BUILD_ROOT` by default, which embeds machine-local sandbox paths
    # into objects and breaks remote-cache hits.
    set_file_prefix_map = True,
)

# Convenience alias. Sipi consumes `@kakadu//:kdu`.
alias(
    name = "kdu",
    actual = ":kakadu",
)
