"""Native `cc_library` build for Kakadu — replaces the `rules_foreign_cc` `make()` wrapper.

Source/flag spec is a direct translation of the upstream per-arch makefiles
shipped in the v8.7 release (the authoritative build spec — Kakadu builds from
these today). For each platform `P`:
  make/Makefile-<P>                       orchestration
  coresys/make/{Makefile-<P>,Targets.mk}  -> libkdu.a   (GENERIC + SIMD objs)
  managed/make/{Makefile-<P>,Targets.mk}  -> libkdu_aux.a (compiles apps/* objs)

`apps/make` only builds standalone executables Sipi never links, so it is
omitted. `libkdu_aux.a` is exactly the `managed` `ALL_OBJS` set (the static-lib
rule excludes `kdu_aux.cpp`; that wrapper is only used by the .so / JNI builds).

SIMD layout (`Targets.mk` + the per-platform makefiles):
  - AArch64 (darwin + linux): the NEON objects compile with the base `copts`
    (`NEONFLAGS` is empty — NEON is unconditional under AArch64), so they fold
    directly into the main libraries.
  - x86_64 (linux): each SIMD ISA needs its own `-m<isa>` flag, so they are
    split into per-ISA `alwayslink` sub-libraries (selected only on x86). The
    objects are reached via Kakadu's run-time CPUID dispatch tables, so
    `alwayslink` guarantees the linker keeps them.

Kakadu's own TUs are pinned to `-std=gnu++17` (clang's default at the version
this code targets); the global `--cxxopt=-std=c++23` would otherwise force
C++23 onto pre-C++23 source. Sipi stays C++23 and includes Kakadu's public
headers under C++23 exactly as it does today. `-fPIC`, `-m64`/`-arch` and the
linker-only `-z noexecstack` are dropped — the hermetic toolchain manages them.
"""

load("@rules_cc//cc:cc_import.bzl", "cc_import")
load("@rules_cc//cc:cc_library.bzl", "cc_library")

package(default_visibility = ["//visibility:public"])

_DARWIN_AARCH64 = "@@//platforms:is_darwin_aarch64"
_LINUX_X86_64 = "@@//platforms:is_linux_x86_64"
_LINUX_AARCH64 = "@@//platforms:is_linux_aarch64"

# Warning suppressions + language level shared by every Kakadu TU.
_BASE_COPTS = [
    "-std=gnu++17",
    "-DNDEBUG",
    "-Wall",
    "-Wno-unused-function",
    "-Wno-overloaded-virtual",
]

# Per-platform base flags from coresys/make/Makefile-<P> C_OPT (minus the
# toolchain-managed -fPIC/-m64/-arch and the linker-only -z noexecstack).
_CORESYS_PLATFORM_COPTS = select({
    _DARWIN_AARCH64: ["-O3", "-DKDU_NEON_INTRINSICS"],
    _LINUX_AARCH64: ["-O2", "-flax-vector-conversions", "-DKDU_NO_NEON81", "-DKDU_NEON_INTRINSICS"],
    _LINUX_X86_64: ["-O2", "-msse2", "-DKDU_X86_INTRINSICS"],
})

# managed/make/Makefile-<P> adds the large-file defines to the same base.
_AUX_LARGEFILE_COPTS = [
    "-D_LARGEFILE64_SOURCE",
    "-D_FILE_OFFSET_BITS=64",
]

# Shared base for the x86-only per-ISA sub-libraries (the _LINUX_X86_64 branch
# above; these targets are only ever selected on x86, so it is inlined).
_X86_BASE_COPTS = _BASE_COPTS + ["-O2", "-msse2", "-DKDU_X86_INTRINSICS"]

# All Kakadu headers, for in-tree quote includes; the public subset Sipi
# compiles against is exported via `includes` on `:kdu`.
_KDU_HDRS = glob(
    [
        "coresys/**/*.h",
        "coresys/**/*.tpp",
        "apps/**/*.h",
        "apps/**/*.tpp",
    ],
    allow_empty = True,
)

_CORESYS_INCLUDES = [
    "coresys/common",
    "coresys/shared",
]

# ----------------------------------------------------------------------------
# coresys -> libkdu.a
# ----------------------------------------------------------------------------

# GENERIC_OBJS (coresys/make/Targets.mk) — built on every platform.
_CORESYS_GENERIC_SRCS = [
    # coding/
    "coresys/coding/block_coding_common.cpp",
    "coresys/coding/block_decoder.cpp",
    "coresys/coding/block_encoder.cpp",
    "coresys/coding/decoder.cpp",
    "coresys/coding/encoder.cpp",
    "coresys/coding/cplex_analysis.cpp",
    "coresys/coding/mq_decoder.cpp",
    "coresys/coding/mq_encoder.cpp",
    # compressed/
    "coresys/compressed/blocks.cpp",
    "coresys/compressed/codestream.cpp",
    "coresys/compressed/compressed.cpp",
    # shared/ kernels/ messaging/ parameters/ common/ threads/ roi/
    "coresys/shared/core_local.cpp",
    "coresys/kernels/kernels.cpp",
    "coresys/messaging/messaging.cpp",
    "coresys/parameters/params.cpp",
    "coresys/common/kdu_arch.cpp",
    "coresys/threads/kdu_threads.cpp",
    "coresys/roi/roi.cpp",
    # transform/
    "coresys/transform/colour.cpp",
    "coresys/transform/transform.cpp",
    "coresys/transform/analysis.cpp",
    "coresys/transform/synthesis.cpp",
    "coresys/transform/fusion.cpp",
    "coresys/transform/multi_transform.cpp",
    "coresys/transform/analysis2.cpp",
    "coresys/transform/synthesis2.cpp",
    "coresys/transform/transform2.cpp",
    # fast_coding/ (HTJ2K block coder, source form)
    "coresys/fast_coding/fbc_common.cpp",
    "coresys/fast_coding/fbc_encoder.cpp",
    "coresys/fast_coding/fbc_decoder.cpp",
    "coresys/fast_coding/fbc_encoder_tools.cpp",
    "coresys/fast_coding/fbc_decoder_tools.cpp",
]

# NEON_OBJS — AArch64 (NEONFLAGS empty, so they use the base copts).
_CORESYS_NEON_SRCS = [
    "coresys/coding/neon_coder_local.cpp",
    "coresys/transform/neon_colour_local.cpp",
    "coresys/transform/neon_dwt_local.cpp",
    "coresys/transform/neon_multi_transform_local.cpp",
    "coresys/transform/neon_analysis2.cpp",
    "coresys/transform/neon_synthesis2.cpp",
]

# srclib_ht/<platform>/libkdu_ht.a — the scalar fast-block-coder fallback
# (single object `fbc_noopt.o`), merged into libkdu.a by the upstream rule.
cc_import(
    name = "kdu_ht",
    static_library = select({
        _DARWIN_AARCH64: "srclib_ht/Mac-arm-64-gcc/libkdu_ht.a",
        _LINUX_X86_64: "srclib_ht/Linux-x86-64-gcc/libkdu_ht.a",
        _LINUX_AARCH64: "srclib_ht/Linux-arm-64-gcc/libkdu_ht.a",
    }),
)

# x86-only per-ISA SIMD sub-libraries (coresys/make/Targets.mk SIMD_*_OBJS).
cc_library(
    name = "coresys_ssse3",
    srcs = [
        "coresys/coding/ssse3_coder_local.cpp",
        "coresys/transform/ssse3_colour_local.cpp",
        "coresys/transform/ssse3_dwt_local.cpp",
    ],
    copts = _X86_BASE_COPTS + ["-mssse3"],
    includes = _CORESYS_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "coresys_sse4",
    srcs = ["coresys/transform/sse4_multi_transform_local.cpp"],
    copts = _X86_BASE_COPTS + ["-msse4.1"],
    includes = _CORESYS_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "coresys_avx",
    srcs = [
        "coresys/coding/avx_coder_local.cpp",
        "coresys/transform/avx_colour_local.cpp",
    ],
    copts = _X86_BASE_COPTS + ["-mavx"],
    includes = _CORESYS_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "coresys_avx2",
    srcs = [
        "coresys/coding/avx2_coder_local.cpp",
        "coresys/transform/avx2_colour_local.cpp",
        "coresys/transform/avx2_dwt_local.cpp",
        "coresys/transform/avx2_multi_transform_local.cpp",
        # AVX2_X64_OBJS (INCLUDE_X64)
        "coresys/transform/avx2_analysis2.cpp",
        "coresys/transform/avx2_synthesis2.cpp",
    ],
    copts = _X86_BASE_COPTS + ["-mavx2", "-mfma", "-mbmi", "-mbmi2", "-mlzcnt"],
    includes = _CORESYS_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "coresys",
    srcs = _CORESYS_GENERIC_SRCS + select({
        _DARWIN_AARCH64: _CORESYS_NEON_SRCS,
        _LINUX_AARCH64: _CORESYS_NEON_SRCS,
        _LINUX_X86_64: [],
    }),
    copts = _BASE_COPTS + _CORESYS_PLATFORM_COPTS,
    includes = _CORESYS_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    deps = [":kdu_ht"] + select({
        _LINUX_X86_64: [
            ":coresys_ssse3",
            ":coresys_sse4",
            ":coresys_avx",
            ":coresys_avx2",
        ],
        "//conditions:default": [],
    }),
)

# ----------------------------------------------------------------------------
# managed -> libkdu_aux.a (compiles apps/* sources)
# ----------------------------------------------------------------------------

_AUX_INCLUDES = [
    "apps/args",
    "apps/caching_sources",
    "apps/client_server",
    "apps/compressed_io",
    "apps/image",
    "apps/jp2",
    "apps/kdu_client",
    "apps/kdu_compress",
    "apps/kdu_server",
    "apps/support",
    "coresys/common",
]

# managed ALL_OBJS minus the SIMD-accelerated objects (managed/make/Targets.mk).
_AUX_GENERIC_SRCS = [
    "apps/compressed_io/file_io.cpp",
    "apps/jp2/jp2.cpp",
    "apps/jp2/jpb.cpp",
    "apps/jp2/jpx.cpp",
    "apps/jp2/mj2.cpp",
    "apps/image/kdu_tiff.cpp",
    "apps/image/sample_reorg.cpp",
    "apps/support/kdu_region_compositor.cpp",
    "apps/support/kdu_region_decompressor.cpp",
    "apps/support/kdu_stripe_compressor.cpp",
    "apps/support/kdu_stripe_decompressor.cpp",
    "apps/support/kdu_stream_decompressor.cpp",
    "apps/support/supp_local.cpp",
    "apps/caching_sources/kdu_cache.cpp",
    "apps/client_server/kdu_client_window.cpp",
    "apps/client_server/kdcs_comms.cpp",
    "apps/kdu_client/kdu_client.cpp",
    "apps/kdu_client/kdu_clientx.cpp",
    "apps/kdu_server/kdu_serve.cpp",
    "apps/kdu_server/kdu_servex.cpp",
    "apps/kdu_compress/roi_sources.cpp",
    "apps/args/args.cpp",
]

# NEON SIMD_ACCELERATED_OBJS — AArch64 (base copts).
_AUX_NEON_SRCS = [
    "apps/image/neon_sample_reorg.cpp",
    "apps/support/neon_stripe_transfer.cpp",
    "apps/support/neon_region_decompressor.cpp",
    "apps/support/neon_region_compositor.cpp",
]

# x86-only per-ISA SIMD sub-libraries (managed AVX2FLAGS = -mavx2 -mfma; no AVX).
cc_library(
    name = "kdu_aux_ssse3",
    srcs = [
        "apps/support/ssse3_stripe_transfer.cpp",
        "apps/support/ssse3_region_decompressor.cpp",
    ],
    copts = _X86_BASE_COPTS + _AUX_LARGEFILE_COPTS + ["-mssse3"],
    includes = _AUX_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "kdu_aux_sse4",
    srcs = ["apps/support/sse4_region_decompressor.cpp"],
    copts = _X86_BASE_COPTS + _AUX_LARGEFILE_COPTS + ["-msse4.1"],
    includes = _AUX_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "kdu_aux_avx2",
    srcs = [
        "apps/support/avx2_stripe_transfer.cpp",
        "apps/support/avx2_region_decompressor.cpp",
        "apps/support/avx2_region_compositor.cpp",
        "apps/image/avx2_sample_reorg.cpp",
    ],
    copts = _X86_BASE_COPTS + _AUX_LARGEFILE_COPTS + ["-mavx2", "-mfma"],
    includes = _AUX_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    alwayslink = True,
)

cc_library(
    name = "kdu_aux",
    srcs = _AUX_GENERIC_SRCS + select({
        _DARWIN_AARCH64: _AUX_NEON_SRCS,
        _LINUX_AARCH64: _AUX_NEON_SRCS,
        _LINUX_X86_64: [],
    }),
    copts = _BASE_COPTS + _CORESYS_PLATFORM_COPTS + _AUX_LARGEFILE_COPTS,
    includes = _AUX_INCLUDES,
    textual_hdrs = _KDU_HDRS,
    deps = [":coresys"] + select({
        _LINUX_X86_64: [
            ":kdu_aux_ssse3",
            ":kdu_aux_sse4",
            ":kdu_aux_avx2",
        ],
        "//conditions:default": [],
    }),
)

# The single target Sipi consumes (`@kakadu//:kdu`): both static libs plus the
# public header search paths Sipi's `#include "kdu_*.h"` / "jp2.h" resolve via.
cc_library(
    name = "kdu",
    includes = [
        "apps/compressed_io",
        "apps/support",
        "coresys/common",
    ],
    deps = [
        ":coresys",
        ":kdu_aux",
    ],
)
