"""Sipi runtime config files — exposed as Bazel filegroups so unit + e2e
tests can declare them as `data` deps.

Consumers:
  - `//test/unit/configuration:configuration_tests` parses
    `sipi.config.lua` to verify the Lua-driven config loader.
  - `//:test_fixtures` aggregates `:all_configs` into the Rust e2e
    runfiles tree (`SIPI_REPO_ROOT/config/`).
"""

package(default_visibility = ["//visibility:public"])

# Every Lua config file at the top level of `config/`. Sub-trees like
# `config/scripts/` are not included by default; add a separate filegroup
# if a future test needs them.
filegroup(
    name = "configs",
    srcs = glob(
        ["*.lua"],
        allow_empty = False,
    ),
)

# Full `config/` tree (top-level + every nested directory). Consumed by
# `//:test_fixtures` to populate `SIPI_REPO_ROOT/config/` in the Rust
# e2e tests' runfiles. Includes nested config trees that `:configs`
# deliberately skips.
filegroup(
    name = "all_configs",
    srcs = glob(
        ["**/*"],
        allow_empty = False,
    ),
)

# Production-image config files — the two .lua entries copied into
# `/sipi/config/` by Bazel's image tar layer (`//src:sipi_runtime_layer`)
# via `$(execpath ...)`.
exports_files([
    "sipi.config.lua",
    "sipi.init.lua",
])
